sass/side.scss
/* ... */
//create your own subreddit
.sidebox {
    .spacer {
        background: none;
    }
    .subtitle {
        color: $light_text
    }
}

//recently viewed links
.gadget {
    a {
        color: $title;
    }
    small {
        color: $light_text !important;
    }
}

// account activity
.account-activity-box a {
    color: $light_text;
}

#search {
    position: absolute;
    top: 313px;
    right: 14px;
    width: 320px;

    @include wow-modern-box;
    input[type=text] {
        background: none;
        border: none;
        color: #fff;
    }

    #searchexpando {
        border: none;
        margin: 0;
        padding: 4px;
        line-height: 30px;
    }
}

// search doodad
#searchexpando {
    background-color: $generic_background;
    border: 1px solid $generic_border;
    color: #fff;
    border-radius: 0;
    a {
        color: #fff;
    }
    #moresearchinfo {
        border-top: 1px solid $generic_border;
    }
}
/* ... */

